完成前台预约功能

--- a/meinian_mobile_web/src/main/webapp/pages/orderSuccess.html
+++ b/meinian_mobile_web/src/main/webapp/pages/orderSuccess.html
@@ -35,8 +35,8 @@
                     <div class="notice-item">
                         <div class="item-title">预约信息</div>
                         <div class="item-content">
-                            <p>会员姓名：{{orderInfo.member}}</p>
-                            <p>旅游套餐：{{orderInfo.setmeal}}</p>
+                            <p>会员姓名：{{orderInfo.memberName}}</p>
+                            <p>旅游套餐：{{orderInfo.setmealName}}</p>
                             <p>旅游日期：{{orderInfo.orderDate}}</p>
                             <p>预约类型：{{orderInfo.orderType}}</p>
                         </div>
