--- a/meinian_web/src/main/webapp/pages/ordersetting.html
+++ b/meinian_web/src/main/webapp/pages/ordersetting.html
@@ -208,6 +208,7 @@
 				//上传成功提示
                 handleSuccess(response, file) {
                     if(response.flag){
+                        this.initOrderSetting()
                         this.$message({
                             message: response.message,
                             type: 'success'
