--- a/meinian_mobile_web/src/main/webapp/pages/orderInfo.html
+++ b/meinian_mobile_web/src/main/webapp/pages/orderInfo.html
@@ -33,7 +33,7 @@
             <div class="contentBox">
                 <div class="card">
                     <div class="">
-                        <img :src="'http://pqjroc654.bkt.clouddn.com/'+setmeal.img" width="100%" height="100%" />
+                        <img :src="setmeal.imgUrl+setmeal.imgName" width="100%" height="100%" />
                     </div>
                     <div class="project-text">
                         <h4 class="tit">{{setmeal.name}}</h4>
@@ -57,8 +57,12 @@
                     </div>
                     <form class="info-form">
                         <div class="input-row">
-                            <label>旅游人</label>
+                            <label>姓名</label>
                             <input v-model="orderInfo.name" type="text" class="input-clear" placeholder="请输入姓名">
+                        </div>
+                        <div class="input-row">
+                            <label>身份证号</label>
+                            <input v-model="orderInfo.idCard" type="text" class="input-clear" placeholder="请输入身份证号">
                         </div>
                         <div class="input-row single-radio">
                             <label class="radio-title">性别</label>
@@ -78,15 +82,12 @@
                         <div class="input-row">
                             <label>手机号</label>
                             <input v-model="orderInfo.telephone" type="text" class="input-clear" placeholder="请输入手机号">
-                            <input style="font-size: x-small;" id="validateCodeButton" @click="sendValidateCode()" type="button" value="发送验证码">
+                            <el-button style="font-size: x-small;" id="validateCodeButton" @click="sendValidateCode()"
+                                       size="medium" type="primary" v-bind:disabled="btnDisabled">{{btnVal}}</el-button>
                         </div>
                         <div class="input-row">
                             <label>验证码</label>
                             <input v-model="orderInfo.validateCode" type="text" class="input-clear" placeholder="请输入验证码">
-                        </div>
-                        <div class="input-row">
-                            <label>身份证号</label>
-                            <input v-model="orderInfo.idCard" type="text" class="input-clear" placeholder="请输入身份证号">
                         </div>
                         <div class="date">
                             <label>旅游日期</label>
@@ -108,17 +109,76 @@
                     orderInfo:{
                         setmealId:id,
                         sex:'1'
-                    }//预约信息
+                    },//预约信息
+                    nums:60,
+                    btnVal:'发送验证码',
+                    btnDisabled: false,
+                    clock:''
                 },
                 methods:{
                     //发送验证码
                     sendValidateCode(){
+                        // 校验手机号
+                        if (!checkTelephone(this.orderInfo.telephone)) {
+                            this.$message.error("手机号码错误！")
+                            return
+                        }
+
+                        // 发送验证码
+                        axios.get("/validateCode/sendForOrder.do?telephone=" + this.orderInfo.telephone).then((resp) => {
+                            if (resp.data.flag) {
+                                // 发送验证码后倒计时
+                                this.btnDisabled = true // 将按钮置为不可点击
+                                this.btnVal = this.nums + '秒后重新获取';
+                                this.$message.success(resp.data.message)
+                                // 定时任务
+                                this.clock = window.setInterval(this.doLoop, 1000) // 每隔1秒执行一次
+                            } else {
+                                this.$message.error(resp.data.message)
+                            }
+                        })
                     },
                     //提交预约
                     submitOrder(){
+                        // 校验身份证
+                        if (!checkIdCard(this.orderInfo.idCard)) {
+                            this.$message.error("身份证号码错误!")
+                        }
+
+                        axios.post("/order/saveOrder.do", this.orderInfo).then((resp) => {
+                            if (resp.data.flag) {
+                                if (resp.data.message === "已经完成预约，不能重复预约") {
+                                    this.$message.info(resp.data.message)
+                                    return
+                                }
+                                window.location.href = "/pages/orderSuccess.html?orderId=" + resp.data.data
+                            } else {
+
+                                this.$message.error(resp.data.message)
+                            }
+                        })
+                    },
+                    doLoop() {
+                        this.nums--;
+                        if (this.nums > 0) {
+                            this.btnVal = this.nums + '秒后重新获取';
+                        } else {
+                            clearInterval(this.clock); //清除js定时器
+                            this.btnDisabled = false
+                            this.btnVal = '重新获取验证码';
+                            this.nums = 60; //重置时间
+                        }
                     }
                 },
                 mounted(){
+
+                    axios.get("/setmeal/getSetmealById.do?id=" + id).then((resp) => {
+                        if (resp.data.flag) {
+                            this.setmeal = resp.data.data
+                        } else {
+                            this.$message.error(resp.data.message)
+                        }
+                    })
                 }
             });
         </script>
@@ -129,7 +189,7 @@
                 'trigger': '.picktime',/*按钮选择器，用于触发弹出插件*/
                 'type': 'date',/*模式：date日期；datetime日期时间；time时间；ym年月；*/
                 'minDate': getSpecifiedDate(new Date(),1),/*最小日期*/
-                'maxDate': getSpecifiedDate(new Date(),30),/*最大日期*/
+                'maxDate': getSpecifiedDate(new Date(),60),/*最大日期*/
                 'onSubmit': function() { /*确认时触发事件*/
                     //var theSelectData = calendar.value;
                 },
