--- a/meinian_mobile_web/src/main/webapp/pages/login.html
+++ b/meinian_mobile_web/src/main/webapp/pages/login.html
@@ -33,14 +33,16 @@
                     <div class="input-row">
                         <label>手机号</label>
                         <div class="loginInput">
-                            <input v-model="loginInfo.telephone" id='account' type="text" placeholder="请输入手机号">
-                            <input id="validateCodeButton" @click="sendValidateCode()" type="button" style="font-size: 12px" value="获取验证码">
+                            <el-input v-model="loginInfo.telephone" id='account' type="text" placeholder="请输入手机号"></el-input>
+                            <br>
+                            <el-button style="font-size: x-small;" @click="sendValidateCode()"
+                                       size="medium" type="primary" v-bind:disabled="btnDisabled">{{btnVal}}</el-button>
                         </div>
                     </div>
                     <div class="input-row">
                         <label>验证码</label>
                         <div class="loginInput">
-                            <input v-model="loginInfo.validateCode" style="width:80%" id='password' type="password" placeholder="请输入验证码">
+                            <el-input v-model="loginInfo.validateCode"  id='password' type="password" placeholder="请输入验证码"></el-input>
                         </div>
                     </div>
                     <div class="input-row" style="font-size: 12px">
@@ -57,31 +59,40 @@
         var vue = new Vue({
             el:'#app',
             data:{
-                loginInfo:{}//登录信息
+                loginInfo:{},//登录信息
+                nums:60,
+                btnVal:'发送验证码',
+                btnDisabled: false,
+                clock:''
             },
             methods:{
                 //发送验证码
                 sendValidateCode(){
-                    var telephone = this.loginInfo.telephone;
-                    if (!checkTelephone(telephone)) {
-                        this.$message.error('请输入正确的手机号');
-                        return false;
+                    // 校验手机号
+                    if (!checkTelephone(this.loginInfo.telephone)) {
+                        this.$message.error("手机号错误！")
+                        return
                     }
-                    validateCodeButton = $("#validateCodeButton")[0];
-                    clock = window.setInterval(doLoop, 1000); //一秒执行一次
-                    axios.post("/validateCode/send4Login.do?telephone=" + telephone).then((response) => {
-                        if(!response.data.flag){
-                            //验证码发送失败
-                            this.$message.error('验证码发送失败，请检查手机号输入是否正确');
+
+                    // 发送验证码
+                    axios.get("/validateCode/send.do?telephone=" + this.loginInfo.telephone + "&state=login").then((resp) => {
+                        if (resp.data.flag) {
+                            // 发送验证码后倒计时
+                            this.btnDisabled = true // 将按钮置为不可点击
+                            this.btnVal = this.nums + '秒后重新获取';
+                            // 定时任务
+                            this.clock = window.setInterval(this.doLoop, 1000) // 每隔1秒执行一次
+                        } else {
+                            this.$message.error(resp.data.message)
                         }
-                    });
+                    })
                 },
                 //登录
                 login(){
-                    var telephone = this.loginInfo.telephone;
-                    if (!checkTelephone(telephone)) {
-                        this.$message.error('请输入正确的手机号');
-                        return false;
+                    // 校验手机号
+                    if (!checkTelephone(this.loginInfo.telephone)) {
+                        this.$message.error("手机号错误！")
+                        return
                     }
                     axios.post("/login/check.do",this.loginInfo).then((response) => {
                         if(response.data.flag){
@@ -92,6 +103,17 @@
                             this.$message.error(response.data.message);
                         }
                     });
+                },
+                doLoop() {
+                    this.nums--;
+                    if (this.nums > 0) {
+                        this.btnVal = this.nums + '秒后重新获取';
+                    } else {
+                        clearInterval(this.clock); //清除js定时器
+                        this.btnDisabled = false
+                        this.btnVal = '重新获取验证码';
+                        this.nums = 60; //重置时间
+                    }
                 }
             }
         });
