--- a/meinian_web/src/main/webapp/pages/main.html
+++ b/meinian_web/src/main/webapp/pages/main.html
@@ -37,14 +37,14 @@
                         <el-dropdown class="avatar-container right-menu-item" trigger="click">
                             <div class="avatar-wrapper">
                                 <img src="../img/user2-160x160.jpg" class="user-avatar">
-                                尚硅谷
+                                {{username}}
                             </div>
                             <el-dropdown-menu slot="dropdown">
                                 <el-dropdown-item divided>
                                     <span style="display:block;">修改密码</span>
                                 </el-dropdown-item>
                                 <el-dropdown-item divided>
-                                        <span style="display:block;"><a href="">退出</a></span>
+                                        <span style="display:block;"><a href="/logout.do">退出</a></span>
                                     </el-dropdown-item>
                             </el-dropdown-menu>
                         </el-dropdown>
@@ -194,7 +194,14 @@
         },
 		 //发送请求获取当前登录用户的用户名
 		created:function () {
-            //发送请求获取当前登录用户的用户名            
+            //发送请求获取当前登录用户的用户名
+            axios.get("/user/getUsername.do").then((resp) => {
+                if (resp.data.flag) {
+                    this.username = resp.data.data
+                } else {
+                    this.$message.error(resp.data.message)
+                }
+            })
         }
     });
     $(function() {
