--- a/meinian_web/src/main/webapp/login.html
+++ b/meinian_web/src/main/webapp/login.html
@@ -16,11 +16,11 @@
 					<div>
 						<h2>管理登录</h2>
 						<span><label>用户名</label></span>
-						<span><input type="text"  name="username" id ="username" class="textbox" ></span>
+						<span><input type="text"  name="username" id ="username" class="textbox" value="admin"></span>
 					</div>
 					<div>
 						<span><label>密码</label></span>
-						<span><input type="password" name="password" class="password"></span>
+						<span><input type="password" name="password" class="password" value="2001"></span>
 					</div>
 					<div class="sign">
 						<input type="submit" value="登录" class="submit" />
