--- a/meinian_web/src/main/webapp/pages/travelgroup.html
+++ b/meinian_web/src/main/webapp/pages/travelgroup.html
@@ -332,7 +332,7 @@
                             this.dialogFormVisible = true
                             this.tableData = resp.data.data
                         } else {
-                            this.$message.error("查询信息失败！请联系管理员")
+                            this.$message.error("查询信息失败")
                         }
                     })
                 },
@@ -348,7 +348,7 @@
                             this.activeName = 'first' // 始终显示第一个选项卡
                             this.dialogFormVisible4Edit = true
                         } else {
-                            this.$message.error("查询信息失败！请联系管理员")
+                            this.$message.error("查询信息失败")
                         }
                     })
                 },
